--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,24 @@
 version: '3.8'
 
 services:
-  web-dashboard:
-    build: .
-    container_name: web-dashboard
+
+  https-server:
+    image: nginx:latest
+    container_name: https-server
     ports:
-      - "443:443"   # Map host port 443 to container
-    restart: unless-stopped
+      - "443:443"
     volumes:
-      - ./index.html:/usr/share/nginx/html/index.html:ro
+      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/certs:/etc/nginx/certs
+      - ./nginx/html:/usr/share/nginx/html
+    restart: unless-stopped
 
   sftp-server:
-    image: atmoz/sftp
+    image: atmoz/sftp:latest
     container_name: sftp-server
     ports:
-      - "2222:22"    # Map host port 2222 to SFTP
+      - "2222:22"
     volumes:
-      - ./sftp_data:/home/testuser/upload
-    command: testuser:testpassword:1001
+      - ./sftp/data:/home/testuser/files
+    command: testuser:password:1001
     restart: unless-stopped
